--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -1,38 +1,49 @@
 name: Build Windows app and setup.exe
+
 on:
   push:
     branches: [ main ]
   workflow_dispatch:
+
 jobs:
   build:
     runs-on: windows-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v2
+
       - name: Install Inno Setup
         run: choco install innosetup -y
+
       - name: Configure
         run: cmake -S . -B build -G "Visual Studio 17 2022" -A x64
+
       - name: Build
         run: cmake --build build --config Release
+
       - name: Verify
+        shell: cmd
         run: |
           dir build\bin
           if not exist build\bin\vu_student_app.exe exit 1
           if not exist build\bin\grades.dll exit 1
+
       - name: Build setup.exe
         shell: pwsh
         run: |
           $iscc = "${env:ProgramFiles(x86)}\Inno Setup 6\ISCC.exe"
           & "$iscc" "packaging\VU-Kornelija-Dambrauskaite.iss"
+
       - name: Collect artifacts
         run: |
           mkdir dist
-          copy packaging\setup.exe dist\setup.exe
           copy build\bin\vu_student_app.exe dist\vu_student_app.exe
           copy build\bin\grades.dll dist\grades.dll
+          copy packaging\setup.exe dist\setup.exe
+
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
